<resources>
    <string name="app_name">Mi Claro Paraguay</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="splash_image_description">Pantalla de inicio SplashScreen</string>
    <string name="finalidad">Finalidad</string>
    <string name="mifrase">Esta aplicación ha sido desarrollada con el propósito principal de mejorar mis habilidades técnicas. Es importante destacar que no recopila información de los usuarios ni accede a sus dispositivos. Su única función es proporcionar acceso a la plataforma de \'CLARO\' de manera segura y eficiente. Además, esta aplicación es de código abierto, fomentando la transparencia y la colaboración en su desarrollo.</string>
    <string name="viewperfil">Ver perfil en GitHub.</string>
    <string name="responsabilidad">Este proyecto y su contenido no están afiliados, financiados, autorizados, respaldados o asociados de ninguna manera con AMX PARAGUAY S.A., CLARO o cualquiera de sus afiliados y subsidiarias. Cualquier marca comercial, marca de servicio, nombre comercial u otros derechos de propiedad intelectual utilizados en este proyecto pertenecen a sus respectivos propietarios.</string>
    <string name="titulo">  Descargo de Responsabilidad  </string>
    <string name="developer">Desarrollador: byStackDev</string>


</resources>