<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo"
    android:scaleType="centerInside"
    tools:ignore="Overdraw">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Acerca de"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:gravity="top|center"
            tools:ignore="HardcodedText,MissingConstraints"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:layout_gravity="top|center"
            android:layout_marginTop="65dp"
            android:elevation="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white">

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/responsabilidad"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalidad"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center|start" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginTop="100dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mifrase"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>


    <TextView
            android:id="@+id/developerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:autoLink="web"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:onClick="openGitHubProfile"
            android:text="@string/viewperfil"
            android:textColorLink="@color/black"
            android:textColor="#1650A6"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/user" />





    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
